--- a/src/scss/overrides/_react-h5-audio-player.scss
+++ b/src/scss/overrides/_react-h5-audio-player.scss
@@ -22,5 +22,20 @@ $theme-color: $sttm-blue;
     border-radius: 2px;
     box-shadow: none;
     margin: 5px 0 10px 0;
+
+    .dark-mode & {
+      background: $sttm-lighter-black;
+    }
+  }
+
+  &_play-pause-button {
+    background: $sttm-white;
+    border-radius: 50%;
+  }
+
+  &_time {
+    .dark-mode & {
+      color: $sttm-white;
+    }
   }
 }
